--- a/package.json
+++ b/package.json
@@ -33,15 +33,18 @@
     "@types/jsonwebtoken": "^9.0.6",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@typescript-eslint/parser": "^7.2.0",
-    "bcrypt": "^5.1.1",
+    "bcrypt": "^5.0.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "eslint": "^8.57.0",
     "express": "^4.18.3",
     "http-status": "^1.7.4",
+    "install": "^0.13.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.2.1",
+    "node": "^18.20.2",
+    "node-pre-gyp": "^0.17.0",
     "ts-node-dev": "^2.0.0",
     "winston": "^3.12.0",
     "zod": "^3.22.4"
